ci(github): disable cleaning
skip ci

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,6 @@ jobs:
           # specific directory on the deployment branch you can specify it
           # here.
           target-folder: ${{ env.slide }}
+          clean: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
