chore(gitignore/vscode): ignore .vscode folder

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,16 @@ dist
 index.html
 .remote-assets
 components.d.ts
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
