--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
     "execa": "8.0.1",
     "jiti": "1.21.0",
     "playwright-chromium": "1.43.1"
-  }
+  },
+  "packageManager": "pnpm@9.0.0+sha256.bdfc9a7b372b5c462176993e586492603e20da5864d2f8881edc2462482c76fa"
 }
