--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "@slidev/cli": "latest",
     "@slidev/theme-default": "latest",
-    "rimraf": "5.0.5"
+    "rimraf": "5.0.5",
+    "slidev-theme-dracula": "0.2.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "2.15.0",
