--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "slidev-theme-dracula": "0.2.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "2.25.1",
-    "@types/node": "20.14.15",
+    "@antfu/eslint-config": "2.25.2",
+    "@types/node": "22.3.0",
     "consola": "3.2.3",
     "eslint": "9.9.0",
     "eslint-plugin-format": "0.1.2",
@@ -23,5 +23,5 @@
     "playwright-chromium": "1.46.0",
     "prettier-plugin-slidev": "1.0.5"
   },
-  "packageManager": "pnpm@9.7.1"
+  "packageManager": "pnpm@9.7.1+sha512.faf344af2d6ca65c4c5c8c2224ea77a81a5e8859cbc4e06b1511ddce2f0151512431dd19e6aff31f2c6a8f5f2aced9bd2273e1fed7dd4de1868984059d2c4247"
 }
