chore(deps): update deps

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,9 @@
 packages:
   - '*/src'
+
+minimumReleaseAgeExclude:
+  - '@types/node'
+
+onlyBuiltDependencies:
+  - esbuild
+  - playwright-chromium
